# cocoui

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  log.txt
include/cocoui/: events.hpp  framebuffer.hpp  primitives.hpp  widget.hpp
include/cocoui/layout/: canvas.hpp  column.hpp  row.hpp
include/cocoui/mixins/: touchable.hpp
include/cocoui/widgets/: button.hpp  image.hpp  solid_color.hpp
src/: core.cpp
src/simulator/: main.cpp
